Add --skip-fs-validation